--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-image": "^4.0.3",
+    "react-router-dom": "^6.2.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
